--- a/public/tunis/dark/index.html
+++ b/public/tunis/dark/index.html
@@ -88,9 +88,9 @@
         <div class="col-lg-4 bg position-fixed d-none d-lg-block"></div>
         <div class="col-12 col-lg-8 offset-lg-4 home-details text-left text-sm-center text-lg-left">
             <div>
-                <img src="http://via.placeholder.com/300x300.jpg" class="img-fluid main-img-mobile d-none d-sm-block d-lg-none" alt="my picture" />
-                <h1 class="text-uppercase poppins-font">I'm steve milner.<span>web designer</span></h1>
-                <p class="open-sans-font">I'm a Tunisian based web designer & front‑end developer focused on crafting clean & user‑friendly experiences, I am passionate about building excellent software that improves the lives of those around me.</p>
+                <img src="https://static.ffx.io/images/$zoom_2.3309%2C$multiply_0.5855%2C$ratio_1%2C$width_1059%2C$x_678%2C$y_162/t_crop_custom/q_86%2Cf_auto/89dcd9ed59d16f7c77f001daa35c38e30b16c8dc.jpg" class="img-fluid main-img-mobile d-none d-sm-block d-lg-none" alt="my picture" />
+                <h1 class="text-uppercase poppins-font">I'm Baratov Mirfayz.<span>web designer</span></h1>
+                <p class="open-sans-font">Hi, I'm Baratov Mirfayz, a passionate and experienced web developer with a strong background in creating dynamic and user-friendly websites. With 4 years of professional experience in the field, I have a deep understanding of web development technologies and frameworks. I specialize in front-end development, utilizing HTML, CSS, and JavaScript to build visually appealing and responsive websites. I have a keen eye for design and pay attention to details, ensuring that the websites I develop not only function flawlessly but also provide an excellent user experience.</p>
                 <a class="button" href="about.html">
                     <span class="button-text">more about me</span>
                     <span class="button-icon fa fa-arrow-right"></span>
